# sechat-server

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  flake.nix
.github/workflows/: ci.yml  deploy.yml
deploy/: cloudflared.config.example.yml  seserver.env.example  seserver.service  setup.sh  tunnel.sh
src/: connection.rs  crypto.rs  errors.rs  mailbox.rs  main.rs  messages.rs  presence.rs  stun.rs  websocket.rs  wire.rs
