[package]
name = "seserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { version = "0.4.45", features = ["serde"] }
crypto = "0.5.1"
dashmap = "6.2.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.32"
hex = "0.4.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["serde"] }
